@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-08T16:37:36Z",
-  "count_outdated" : 652,
-  "uniques_outdated" : 338,
-  "count" : 686,
-  "uniques" : 356,
+  "timestamp" : "2022-07-09T02:01:18Z",
+  "count_outdated" : 655,
+  "uniques_outdated" : 340,
+  "count" : 688,
+  "uniques" : 357,
   "clones" : [
-    {
-      "timestamp": "2022-06-24T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-06-25T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
