@@ -1,12 +1,7 @@
 {
-  "count": 34,
-  "uniques": 5,
+  "count": 33,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-06-24T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-25T00:00:00Z",
       "count": 2,
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
